<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.ahsr.tortuga.RegisterActivity">

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/main_name"
        android:selectAllOnFocus="true"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/register_cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_name"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/cpf"
        android:selectAllOnFocus="true"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_cpf"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/prompt_password"
        android:selectAllOnFocus="true"/>

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/register_phone"
        android:selectAllOnFocus="true"/>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_phone"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/register_email"
        android:selectAllOnFocus="true"/>

    <EditText
        android:id="@+id/register_cep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/register_cep"
        android:selectAllOnFocus="true"/>

    <EditText
        android:id="@+id/register_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_cep"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/register_number"
        android:selectAllOnFocus="true"/>

    <Button
        android:id="@+id/button_register"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_number"
        android:hint="@string/register_ok"
        android:textStyle="bold"/>



</RelativeLayout>
